[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/trash.png" type="Texture" id=1]
[ext_resource path="res://images/open.png" type="Texture" id=2]
[ext_resource path="res://scripts/DiagOKToYes.gd" type="Script" id=3]
[ext_resource path="res://images/replace.png" type="Texture" id=4]
[ext_resource path="res://SaveLoadSelector.gd" type="Script" id=5]

[node name="SaveLoadSelector" type="HBoxContainer"]
margin_right = 439.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/separation = 8
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 261.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Grid" type="GridContainer" parent="VBox"]
margin_right = 261.0
margin_bottom = 36.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Save" type="Label" parent="VBox/Grid"]
margin_right = 97.0
margin_bottom = 14.0
text = "Save 0001"

[node name="Time" type="Label" parent="VBox/Grid"]
margin_left = 113.0
margin_right = 205.0
margin_bottom = 14.0
text = "Time 00:03:22"

[node name="Camapign" type="Label" parent="VBox/Grid"]
margin_top = 22.0
margin_right = 97.0
margin_bottom = 36.0
text = "Main Campaign"

[node name="Level" type="Label" parent="VBox/Grid"]
margin_left = 113.0
margin_top = 22.0
margin_right = 205.0
margin_bottom = 36.0
text = "Sandbox"

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 44.0
margin_right = 261.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Overwrite" type="Button" parent="VBox/HBox"]
visible = false
margin_right = 128.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ui_overwrite"
icon = ExtResource( 4 )
expand_icon = true

[node name="Load" type="Button" parent="VBox/HBox"]
margin_right = 128.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ui_load"
icon = ExtResource( 2 )
expand_icon = true

[node name="Delete" type="Button" parent="VBox/HBox"]
margin_left = 132.0
margin_right = 261.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ui_delete"
icon = ExtResource( 1 )
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 269.0
margin_right = 439.0
margin_bottom = 100.0
rect_min_size = Vector2( 170, 100 )
expand = true

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 391.0
margin_right = 591.0
margin_bottom = 100.0
script = ExtResource( 3 )

[node name="OverwriteConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 391.0
margin_right = 591.0
margin_bottom = 100.0
script = ExtResource( 3 )

[connection signal="pressed" from="VBox/HBox/Overwrite" to="." method="_on_Overwrite_pressed"]
[connection signal="pressed" from="VBox/HBox/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBox/HBox/Delete" to="." method="_on_Delete_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_DeleteConfirmationDialog_confirmed"]
[connection signal="confirmed" from="OverwriteConfirmationDialog" to="." method="_on_OverwriteConfirmationDialog_confirmed"]
